syntax="proto3";
package proto;

option go_package = "github.com/yashnirmal/protoexample/proto";

message MenuRequest { }

message Item {
    string id = 1;
    string name = 2;
}

message Menu {
    repeated Item items = 1;
}


message Order {
    repeated Item items = 1;
}

message Receipt {
    string order_id = 1;
}

message OrderStatus {
    string orderId = 1;
    string status = 2;
}

service CoffeeShop {
    rpc GetMenu(MenuRequest) returns (stream Menu);
    rpc PlaceOrder(Order) returns (Receipt);
    rpc GetOrderStatus(Receipt) returns (OrderStatus);
}

